--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "prepare": "pnpm run build"
   },
   "private": true,
+  "peerDependencies": {
+    "next": "15.2.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "sass": "^1.88.0"
+  },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
     "@radix-ui/react-accordion": "^1.2.4",
@@ -15,10 +21,6 @@
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-visually-hidden": "^1.2.2",
-    "next": "15.2.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sass": "^1.88.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
