--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-visually-hidden": "^1.2.2",
+    "@radix-ui/react-visually-hidden": "^1.2.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
