--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "^15.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.88.0"
+    "sass": "^1.88.0",
+    "@phosphor-icons/react": "^2.1.10",
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
