--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sass": "^1.88.0",
-    "@phosphor-icons/react": "^2.1.10",
+    "@phosphor-icons/react": "^2.1.10"
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
