--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true
   },
-  "include": ["src"],
+  "include": ["src", "types.d.ts"],
   "exclude": ["**/*.scss"]
 }
