Adc 'react-spinners' & lógica no botão

--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   },
   "private": true,
   "peerDependencies": {
+    "@phosphor-icons/react": "^2.1.10",
     "next": "^15.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.88.0",
-    "@phosphor-icons/react": "^2.1.10"
+    "sass": "^1.88.0"
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
@@ -25,7 +25,8 @@
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-visually-hidden": "^1.2.2"
+    "@radix-ui/react-visually-hidden": "^1.2.2",
+    "react-spinners": "^0.17.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
